Fix scroll issues with current streams table, prevent from overflowing when it has too many primary keys selected

--- a/airbyte-webapp/src/components/connection/CatalogTree/CatalogTree.module.scss
+++ b/airbyte-webapp/src/components/connection/CatalogTree/CatalogTree.module.scss
@@ -2,9 +2,8 @@
 
 .catalogTreeTable {
   padding: variables.$spacing-lg variables.$spacing-xl 0;
-  overflow: auto;
-  border-radius: 10px;
-  margin-bottom: 29px;
+  overflow-y: auto;
+  margin-bottom: variables.$spacing-xl;
 
   &.newCatalogTreeTable {
     padding: 0;
